testsuite/tests/parser/should_fail/BranchHints2.hs
{-# LANGUAGE GADTs #-}

module M where

data T where
  A :: T
  {-# LIKELY 1 #-} B :: T